--- a/.github/workflows/floblog-build.yaml
+++ b/.github/workflows/floblog-build.yaml
@@ -36,7 +36,7 @@ jobs:
 #        env:
 #          MY_ENV_VAR: value-for-my-env-var
 #          MY_SECRET_ENV_VAR: ${{ secrets.MY_SECRET }} # here you can find information how to create secrets: https://docs.github.com/en/actions/security-guides/encrypted-secrets
-        run: docker-compose up
+        run: docker-compose up -d
 
       - name: Setup composer
         uses: php-actions/composer@v6
