--- a/.github/workflows/floblog-build.yaml
+++ b/.github/workflows/floblog-build.yaml
@@ -41,8 +41,8 @@ jobs:
       - name: Setup composer
         uses: php-actions/composer@v6
 # uncomment the following lines if you want to add environment variables for this step
-#        env:
-#          MY_ENV_VAR: value-for-my-env-var
+        env:
+          MY_ENV_VAR: prod
 #          MY_SECRET_ENV_VAR: ${{ secrets.MY_SECRET }} # here you can find information how to create secrets: https://docs.github.com/en/actions/security-guides/encrypted-secrets
         with:
           php_version: '8.2'
