--- a/.github/workflows/floblog-build.yaml
+++ b/.github/workflows/floblog-build.yaml
@@ -33,8 +33,8 @@ jobs:
 
       - name: Run script
 # uncomment the following lines if you want to add environment variables for this step
-#        env:
-#          MY_ENV_VAR: value-for-my-env-var
+        env:
+          MY_ENV_VAR: prod
 #          MY_SECRET_ENV_VAR: ${{ secrets.MY_SECRET }} # here you can find information how to create secrets: https://docs.github.com/en/actions/security-guides/encrypted-secrets
         run: docker-compose up -d
 
