--- a/.github/workflows/floblog-build.yaml
+++ b/.github/workflows/floblog-build.yaml
@@ -34,7 +34,7 @@ jobs:
       - name: Run script
 # uncomment the following lines if you want to add environment variables for this step
         env:
-          MY_ENV_VAR: prod
+          APP_ENV: prod
 #          MY_SECRET_ENV_VAR: ${{ secrets.MY_SECRET }} # here you can find information how to create secrets: https://docs.github.com/en/actions/security-guides/encrypted-secrets
         run: docker-compose up -d
 
@@ -42,7 +42,7 @@ jobs:
         uses: php-actions/composer@v6
 # uncomment the following lines if you want to add environment variables for this step
         env:
-          MY_ENV_VAR: prod
+          APP_ENV: prod
 #          MY_SECRET_ENV_VAR: ${{ secrets.MY_SECRET }} # here you can find information how to create secrets: https://docs.github.com/en/actions/security-guides/encrypted-secrets
         with:
           php_version: '8.2'
