--- a/.htaccess
+++ b/.htaccess
@@ -1,11 +1,3 @@
-### IMPORTANT ###
-### Because we can't change the webroot folder to a subfolder of the document root, we need this rewrite rules ###
-
-RewriteEngine on
-
-# serve existing files in the /public folder as if they were in /
-RewriteCond %{REQUEST_URI} !public/
-RewriteRule (.*) /public/$1 [L]
-
-# route everything else to /public/index.php
-RewriteRule ^ /public/index.php [L]
+RewriteEngine On
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteRule ^(.*)$ public/index.php [QSA,L]
